--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         <section>
             <h2>Comando HTML</h2>
             <p>O comando HTML é essencial para criar a estrutura básica de um site. Ele define os elementos da página, como títulos, parágrafos e imagens.</p>
-            <img src="html-example.png" alt="Exemplo de código HTML">
+            <img src="download(1).jpeg" alt="Exemplo de código HTML">
         </section>
         <section>
             <h2>Comando CSS</h2>
             <p>O comando CSS é utilizado para estilizar e formatar o conteúdo do seu site. Com ele, você pode alterar a cor, fonte e tamanho dos elementos, além de definir layouts.</p>
-            <img src="css-example.jpg" alt="Exemplo de código CSS">
+            <img src="download.jpeg" alt="Exemplo de código CSS">
         </section>
     </main>
 </body>
